--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
     "name": "mathscapes",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "One line description of the package.",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "tsc",
-      "test": "jest"
+        "test": "jest",
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "@types/jest": "^29.5.14",
-      "jest": "^29.7.0",
-      "ts-jest": "^29.2.5",
-      "typescript": "^5.6.3"
+        "@types/jest": "^29.5.14",
+        "jest": "^29.7.0",
+        "jsdoc": "^4.0.4",
+        "ts-jest": "^29.2.5",
+        "typescript": "^5.6.3"
     }
-  }
+}
