--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mathscapes",
-    "version": "0.1.3",
-    "description": "One line description of the package.",
+    "version": "0.1.4",
+    "description": "Maths for Machine Learning",
     "main": "index.js",
     "scripts": {
         "test": "jest",
